初始，（还未添加优先级）

--- a/src/edu/sjtu/simpl/grammar/.gitignore
+++ b/src/edu/sjtu/simpl/grammar/.gitignore
@@ -17,3 +17,59 @@
 /SimPL.java
 /SimPLTokenManager.java
 /SimPLTreeConstants.java
+/ASTAnonymousFun.java
+/ASTApplication.java
+/ASTAssignmentExp.java
+/ASTAssignmentTail.java
+/ASTBoolValue.java
+/ASTBrackedExp.java
+/ASTConditionalExp.java
+/ASTExpTail.java
+/ASTExpression.java
+/ASTFstExp.java
+/ASTHeadExp.java
+/ASTIdentifier.java
+/ASTIntValue.java
+/ASTInteger.java
+/ASTLetExp.java
+/ASTList.java
+/ASTListTail.java
+/ASTListValueTail.java
+/ASTNilValue.java
+/ASTNopValue.java
+/ASTPair.java
+/ASTPairValue.java
+/ASTSequenceTail.java
+/ASTSequenseExp.java
+/ASTSndExp.java
+/ASTStart.java
+/ASTTailExp.java
+/ASTValue.java
+/ASTValueTail.java
+/ASTWhileLoopExp.java
+/ASTBop.java
+/ASTBopTail.java
+/ASTUop.java
+/ASTUopExpression.java
+/ASTUopExp.java
+/ASTNegation.java
+/ASTNot.java
+/ASTAnd.java
+/ASTBigger.java
+/ASTDivde.java
+/ASTLess.java
+/ASTMinus.java
+/ASTOr.java
+/ASTPlus.java
+/ASTTime.java
+/ASTAndOp.java
+/ASTBiggerOp.java
+/ASTDivdeOp.java
+/ASTLessOp.java
+/ASTMinusOp.java
+/ASTNegationOp.java
+/ASTNotOp.java
+/ASTOrOp.java
+/ASTPlusOp.java
+/ASTTimeOp.java
+/ASTProgram.java
