--- a/src/edu/sjtu/simpl/grammar/.gitignore
+++ b/src/edu/sjtu/simpl/grammar/.gitignore
@@ -73,3 +73,8 @@
 /ASTPlusOp.java
 /ASTTimeOp.java
 /ASTProgram.java
+/ASTEqualOp.java
+/ASTLeftParenthness.java
+/ASTApplicationTail.java
+/ASTBrackedTail.java
+/ASTPairTail.java
